argocd/applications/prod/dareyscore/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dareyscore-worker
  namespace: dareyscore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dareyscore-worker
  template:
    metadata:
      labels:
        app: dareyscore-worker
    spec:
      serviceAccountName: dareyscore-sa
      containers:
        - name: worker
          image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-worker:87f99c76054b3c0f435e67519403df99d39d30f6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
