argocd/applications/prod/dareyscore/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dareyscore
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dareyscore
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
