argocd/applications/prod/dareyscore/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dareyscore
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: dareyscore
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
